# ratatoskr

./: Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
01_logging_seismic/: Makefile  pyproject.toml  requirements.txt
01_logging_seismic/src/logging_seismic/: __init__.py
01_logging_seismic/src/logging_seismic/helpers/: config.py  file_finder_service.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: dummy.ipynb
src/trash/: __init__.py
tests/: dummy_helper_test.py
