[project]
name = "logging_seismic"
version = "0.0.1"
authors = [{ name = "Earth Rover Program" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = [
    "debugpy",
    "ipykernel",
    "ipympl",
    "loguru",
    "pre-commit",
    "python-dotenv",
    "pytest",
    "ruff",
    "sourcery",
]

[tool.ruff]
lint.select = ["F", "E", "W", "C90", "I", "PL", "D"]
lint.ignore = ["D203", "D213"]
lint.fixable = ["ALL"]
line-length = 88

[[tool.mypy.overrides]]
module = ["logging_seismic.*"]
follow_untyped_imports = true

[tool.pyright]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.13"
pythonPlatform = "Linux"
